# quick-ternaries

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  old_setup.cfg  pytest.ini  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
dev/: README.md  demo_tabs_side.py
dev/plotly-select-demo/: README.md  df8.csv  main.py  plotly_interface.py  select_demo_reqs.txt
dev/pyrolite-demo/: README.md  bootstrap.csv  demo.py  df8-20000p.csv  df8-2000p.csv  df8.csv  pyro_demo_reqs.txt
docs/: release.md
launcher/: environment.yml  quick-ternaries_mac.command  quick-ternaries_mac_conda.command  quick-ternaries_windows.bat  quick-ternaries_windows_conda.bat  quick-ternaries_windows_conda_2.bat  requirements.txt  update_log.txt  updater.py
launcher/quick-ternaries-mac-conda-launcher/: environment.yml  quick-ternaries_mac_conda.command
launcher/quick-ternaries-mac-launcher/: quick-ternaries_mac.command
old_quick_ternaries/: app.py  color_utils.py  file_handling_utils.py  filter_widgets.py  ternary_gui.py  ternary_utils.py
quick_ternaries/: advanced_widgets.py  configuration.py  filter_widgets.py  main.py  setup_venv.py  ternary_gui.py  ternary_utils.py  test.ipynb  test.py  updater.py
quick_ternaries.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quick_ternaries/app/: __init__.py  app.py
quick_ternaries/controllers/: __init__.py  setup_menu_controller.py  trace_editor_controller.py
quick_ternaries/data/: DATA.csv  ObsPtDATA.csv
quick_ternaries/models/: __init__.py  advanced_setup_menu_model.py  axis_members_model.py  chemical_formula_model.py  data_file_metadata_model.py  data_library_model.py  error_entry_model.py  filter_model.py  pandas_series_model.py  plot_labels_model.py  setup_menu_model.py  trace_editor_model.py
quick_ternaries/resources/: cartesian.html  curr_plot.html  loading.html  setup_menu_placeholder.html  ternary.html
quick_ternaries/services/: __init__.py  axis_formatter.py  cartesian_plot_maker.py  cartesian_trace_maker.py  filters.py  molar_mass_calculator.py  ternary_plot_maker.py  ternary_trace_maker.py  zmap_plot_maker.py
quick_ternaries/utils/: __init__.py  df_manager.py  fonts.py  functions.py  legend_layout.py  plotly_html.py  utils.py
quick_ternaries/views/: __init__.py  filter_editor_view.py  setup_menu_view.py  tab_panel_widget.py  trace_editor_view.py
src/: main.py
src/controllers/: __init__.py  app_controller.py  (+1 more)
src2/: DEVNOTES.md  axis_formatter.py  cartesian_plot_maker.py  cartesian_trace_maker.py  contour_utils.py  error_entry_model.py  main.py  model.py  ternary_plot_maker.py  ternary_plot_maker_2.py  ternary_trace_maker.py  ternary_trace_maker_2.py  ternary_trace_maker_3.py  ternary_trace_maker_4.py  ternary_trace_maker_5.py  ternary_trace_maker_G.py  utils.py  view-A.py  view-B.py  view-C.py  view-D.py  view-E-3.py  view-E-4.py  view-E-5.py  view-E-6.py  view-E.py  view-F.py  view-G.py  view-H.py  view-I.py  view-J.py  view-K.py  view-L.py  view-M.py  view-N.py  view-O.py  view-P.py  view-Q.py  view10.py  view11.py  (+63 more)
src3/: main.py
tests/: conftest.py  tmp.py  tmp2.py
(+282 files in other folders)
