[metadata]
name = quick-ternaries
version = 0.0.2
author = Ari Essunfeld, Reid Morris
author_email = ariessunfeld@gmail.com, reidmorris0419@gmail.com
description = A tool for making ternary diagrams.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    matplotlib==3.7.1
    molmass==2023.4.10
    openpyxl==3.1.2
    pandas==2.0.2
    pip-chill==1.0.3
    plotly==5.15.0
    pyinstaller==5.12.0
    pyside6==6.5.1.1
    tqdm==4.65.0
    kaleido==1.0.1.post1; sys_platform=='win32'
    kaleido==0.2.1; sys_platform=='linux'
    kaleido==0.2.1; sys_platform=='darwin'

[options.entry_points]
console_scripts =
    quick-ternaries=quick_ternaries.ternary_gui:main

