[metadata]
name = quick-ternaries
version = 0.1.0
author = Ari Essunfeld, Reid Morris
author_email = ariessunfeld@gmail.com, reidmorris0419@gmail.com
description = A tool for making ternary diagrams.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    numpy==1.26.4
    matplotlib==3.7.1
    scipy==1.11.4
    molmass==2023.4.10
    openpyxl==3.1.2
    pandas==2.0.2
    plotly==5.15.0
    pyside6==6.5.1.1
    kaleido==0.1.0.post1; sys_platform=='win32'
    kaleido==0.2.1; sys_platform=='linux'
    kaleido==0.2.1; sys_platform=='darwin'

[options.entry_points]
console_scripts =
    quick-ternaries=src.main:main

[options.package_data]
src=resources/blank_ternary_plot.html, resources/*.gif
