[metadata]
name = quick-ternaries
version = 1.0.1
author = Ari Essunfeld, Reid Morris
author_email = ariessunfeld@gmail.com, reidmorris0419@gmail.com
description = A tool for making ternary diagrams and other scientific data visualizations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = find:
python_requires = >=3.11,<3.15
zip_safe = False
include_package_data = True
install_requires =
    numpy>=1.26.4,<3
    matplotlib>=3.8.4,<4
    scipy>=1.11.4,<2
    molmass>=2023.8.30
    openpyxl>=3.1.2,<4
    pandas>=2.1.4,<4
    plotly>=5.24.1,<7
    pyside6>=6.10,<7
    kaleido>=0.2.1,<2

[options.extras_require]
test =
    pytest>=8
    pytest-cov>=5

[options.entry_points]
console_scripts =
    quick-ternaries=quick_ternaries.main:main

[options.package_data]
quick_ternaries =
    resources/fonts/*.ttf
    resources/fonts/*.txt
